--- a/index.html
+++ b/index.html
@@ -2,11 +2,27 @@
 <html>
 <head>
   <title>SMS Excel Plugin</title>
+  <script src="https://appsforoffice.microsoft.com/lib/1/hosted/office.js"></script>
 </head>
-<body>
-  <h2>✅ SMS Excel Plugin Loaded</h2>
-  <p>This is your own plugin UI.</p>
 
-  <button>Send SMS</button>
+<body>
+  <h2>📩 SMS Excel Plugin</h2>
+
+  <button onclick="readCell()">Read Selected Cell</button>
+
+  <p id="output"></p>
+
+  <script>
+    function readCell() {
+      Excel.run(async (context) => {
+        const range = context.workbook.getSelectedRange();
+        range.load("values");
+        await context.sync();
+
+        document.getElementById("output").innerText =
+          "Selected Cell Value: " + range.values[0][0];
+      });
+    }
+  </script>
 </body>
 </html>
